add width 100% to input elements in each pages

--- a/src/scss/pages/register.scss
+++ b/src/scss/pages/register.scss
@@ -21,4 +21,11 @@
   margin-bottom: 40px;
   background-color: white;
   padding: 20px;
+
+  & input[type='text'],
+  input[type='email'],
+  input[type='password'],
+  input[type='submit'] {
+    width: 100%;
+  }
 }
