--- a/src/scss/modules/_search.scss
+++ b/src/scss/modules/_search.scss
@@ -26,9 +26,17 @@
     position: relative;
     margin-bottom: 30px;
   }
-  &__input {
-    // other styles is written in input[type='text'] above that override _resultFormStyles
+  & input[type='text'] {
+    background-color: white !important;
+    border: none !important;
+    outline: none !important;
+    padding: 4px 8px;
     letter-spacing: 2px;
+    width: 100%;
+
+    &:focus {
+      border: none !important;
+    }
   }
   &__btn {
     outline: none !important;
@@ -82,18 +90,6 @@
       height: 100%;
       background-color: $searchBgColor;
       z-index: -100;
-    }
-  }
-
-  & input[type='text'] {
-    background-color: white !important;
-    border: none !important;
-    outline: none !important;
-    padding: 4px 8px;
-    letter-spacing: 2px;
-
-    &:focus {
-      border: none !important;
     }
   }
 }
