--- a/src/scss/pages/edit-profile.scss
+++ b/src/scss/pages/edit-profile.scss
@@ -60,5 +60,11 @@
     margin-bottom: 40px;
     background-color: white;
     padding: 20px;
+
+    & input[type='email'],
+      input[type='password'],
+      input[type='submit'] {
+        width: 100%;
+      }
   }
 }
