--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -22,6 +22,12 @@
   background-color: white;
   padding: 20px;
 
+  & input[type='email'],
+  input[type='password'],
+  input[type='submit'] {
+    width: 100%;
+  }
+
   &__unvalid {
     text-align: right;
     color: $loginUnvalidTextColor;
