--- a/src/scss/pages/edit-profile.scss
+++ b/src/scss/pages/edit-profile.scss
@@ -42,7 +42,10 @@
     & .usericon {
       width: 80px;
       height: 80px;
-      margin: 0 auto;
+      margin: 0 auto 4px;
+      padding: 8px;
+      border-radius: 50%;
+      background-color: white;
 
       & img {
         border-radius: 50%;
@@ -53,6 +56,7 @@
     }
     & .username {
       text-align: center;
+      font-size: 20px;
     }
   }
 
@@ -62,9 +66,9 @@
     padding: 20px;
 
     & input[type='email'],
-      input[type='password'],
-      input[type='submit'] {
-        width: 100%;
-      }
+    input[type='password'],
+    input[type='submit'] {
+      width: 100%;
+    }
   }
 }
