complete mobile-menu styles and add proper link to each navs

--- a/src/scss/modules/_mobile-menu.scss
+++ b/src/scss/modules/_mobile-menu.scss
@@ -6,13 +6,14 @@ $cMenuOpen: $baseColor;
   transition: transform 0.3s, box-shadow 0.1s;
 }
 .mobile-menu {
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 260px;
   height: 100%;
   background-color: $subColor;
   transform: translateX(-260px);
   transition: transform 0.3s;
+  -webkit-overflow-scrolling: touch;
 
   &__btn {
     background-color: unset;
@@ -75,6 +76,12 @@ $cMenuOpen: $baseColor;
     font-size: 1.2em;
     letter-spacing: 1px;
   }
+
+  &__body {
+    background-color: $subColor;
+    overflow: scroll;
+    padding-bottom: 80px;
+  }
   &__main {
     padding: 40px;
     margin: 0;
@@ -95,12 +102,12 @@ $cMenuOpen: $baseColor;
     text-decoration: none !important;
 
     &:hover {
-      color: $baseColor;
+      color: $accentColor;
     }
   }
   &__logo {
     width: 50%;
-    margin: 0 auto 24px;
+    margin: 0 auto 32px;
     cursor: pointer;
     & img {
       max-width: 100%;
@@ -117,7 +124,7 @@ $cMenuOpen: $baseColor;
       transition: background-color .3s;
 
       &:hover {
-        background-color: skyblue;
+        background-color: $accentColor;
       }
     }
 
@@ -132,6 +139,8 @@ $cMenuOpen: $baseColor;
   & #contents-container {
     transform: translate(260px, 0);
     box-shadow: 0 8px 40px -10px rgba(0, 0, 0, 0.8);
+    position: fixed;
+    width: 100vw;
   }
 
   & .mobile-menu {
