--- a/src/scss/modules/_mobile-menu.scss
+++ b/src/scss/modules/_mobile-menu.scss
@@ -72,9 +72,13 @@ $cMenuOpen: $baseColor;
     }
   }
   &__username {
-    color: white;
     font-size: 1.2em;
     letter-spacing: 1px;
+
+    & a {
+      color: white;
+      text-decoration: none;
+    }
   }
 
   &__body {
@@ -121,7 +125,7 @@ $cMenuOpen: $baseColor;
       margin: 0 2px;
       padding: 16px;
       border-radius: 50%;
-      transition: background-color .3s;
+      transition: background-color 0.3s;
 
       &:hover {
         background-color: $accentColor;
