--- a/src/scss/pages/register.scss
+++ b/src/scss/pages/register.scss
@@ -5,16 +5,11 @@
 @import '../modules/header';
 @import '../modules/mobile-menu';
 @import '../modules/hero';
-@import '../modules/nav';
 @import '../modules/form';
 @import '../modules/footer';
 
 #global-container {
   background-color: $baseColor;
-}
-
-.nav {
-  margin-bottom: 40px;
 }
 
 .register {
@@ -27,5 +22,18 @@
   input[type='password'],
   input[type='submit'] {
     width: 100%;
+  }
+
+  &__notation {
+    background-color: $subColor;
+    margin-bottom: 40px;
+
+    & .notation {
+      height: 60px;
+      font-size: 16px;
+      color: $baseColor;
+      line-height: 60px;
+      text-align: center;
+    }
   }
 }
