--- a/src/scss/pages/thanks.scss
+++ b/src/scss/pages/thanks.scss
@@ -5,7 +5,6 @@
 @import '../modules/header';
 @import '../modules/mobile-menu';
 @import '../modules/hero';
-@import '../modules/nav';
 @import '../modules/form';
 @import '../modules/footer';
 
@@ -17,8 +16,21 @@
   margin-bottom: 40px;
 }
 
-.confirm {
+.thanks {
   margin-bottom: 40px;
   background-color: white;
   padding: 20px;
+
+  &__notation {
+    background-color: $subColor;
+    margin-bottom: 40px;
+
+    & .notation {
+      height: 60px;
+      font-size: 16px;
+      color: $baseColor;
+      line-height: 60px;
+      text-align: center;
+    }
+  }
 }
