--- a/src/scss/pages/mypage.scss
+++ b/src/scss/pages/mypage.scss
@@ -44,17 +44,22 @@
     z-index: 100;
 
     & .usericon {
-      width: 80px;
-      height: 80px;
       margin: 0 auto 4px;
-      padding: 8px;
-      border-radius: 50%;
-      background-color: white;
+      text-align: center;
 
-      & img {
+      & .circle {
         max-width: 100%;
         object-position: center;
         object-fit: cover;
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        background-color: white;
+        cursor: pointer;
+
+        &.default {
+          padding: 8px;
+        }
       }
     }
     & .username {
