add a class for js and modify js to get all icons and then add cursor pointer

--- a/src/scss/modules/_mobile-menu.scss
+++ b/src/scss/modules/_mobile-menu.scss
@@ -69,6 +69,7 @@ $cMenuOpen: $baseColor;
       object-position: center;
       object-fit: cover;
       background-color: white;
+      cursor: pointer;
     }
   }
   &__username {
