--- a/src/scss/pages/mypage.scss
+++ b/src/scss/pages/mypage.scss
@@ -77,10 +77,10 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
-  background: $subColor;
+  background: $accentColor;
   text-align: center;
   transition: all 0.5s;
   z-index: 100;
@@ -101,7 +101,7 @@
       object-fit: cover;
     }
     & span {
-      font-size: 10px;
+      font-size: 13px;
     }
   }
   &:hover {
